--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         </aside>
       </section>
     </main>
-    <p>*with a little bit of inline JS to clear the url bar</p>
+
+    <footer>
+      <p>*with a little bit of JS to clear the url bar after the modal close</p>
+    </footer>
   </body>
 </html>
